--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="es"><head><meta http-equiv="origin-trial" content="Az520Inasey3TAyqLyojQa8MnmCALSEU29yQFW8dePZ7xQTvSt73pHazLFTK5f7SyLUJSo2uKLesEtEa9aUYcgMAAACPeyJvcmlnaW4iOiJodHRwczovL2dvb2dsZS5jb206NDQzIiwiZmVhdHVyZSI6IkRpc2FibGVUaGlyZFBhcnR5U3RvcmFnZVBhcnRpdGlvbmluZyIsImV4cGlyeSI6MTcyNTQwNzk5OSwiaXNTdWJkb21haW4iOnRydWUsImlzVGhpcmRQYXJ0eSI6dHJ1ZX0=">
     	<meta charset="utf-8">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -182,15 +181,15 @@ address{color:#666666;font-size:12px;font-style:normal;line-height:16px;}
 		  
         	<div class="alert alert-success">
 				<p>
-					El Ministerio de Educación confirma que con fecha <strong>13 de julio de 2024</strong>,
-					a las <strong>16:09:26</strong>, se ha emitido a través del
+					El Ministerio de Educación confirma que con fecha <strong>18 de julio de 2024</strong>,
+					a las <strong>15:30:26</strong>, se ha emitido a través del
 					portal web de certificados de AyudaMineduc, el certificado
 					"<strong>Certificado Anual De Estudios</strong>" del año nominal
-					"<strong>2023</strong>" al ciudadano RUN
-					<strong>21.329.248-K</strong>
+					"<strong>2022</strong>" al ciudadano RUN
+					<strong>26.207.216-9</strong>
 				</p>
 					<hr>
-					<a style="float:right;" class="btn btn-primary btn-sm" href="https://drive.usercontent.google.com/u/0/uc?id=10IsaSMBSNGjRyB6CprnJ-Pn0spL30FfM&amp;export=download"><span class="glyphicon glyphicon-file"></span>&nbsp;Descargar Original&nbsp;</a>
+					<a style="float:right;" class="btn btn-primary btn-sm" href="https://drive.usercontent.google.com/u/0/uc?id=1rus0GVgXBJw5iqY5sk-ALWubf3VpBzKL&amp;export=download"><span class="glyphicon glyphicon-file"></span>&nbsp;Descargar Original&nbsp;</a>
 					<br><br>
     	</div>
 		
@@ -307,6 +306,7 @@ address{color:#666666;font-size:12px;font-style:normal;line-height:16px;}
 <!-- 				<br/> -->
 			</div>
 	
+
 
 
 
